--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     
     <div>
-        <img src="icon.jpg" alt="">
+        <img src="" alt="">
         <br>
         <h2 id="title1" align="center">お買い物＆持ち物リスト<br>(Make Lists)</h2>
         <h3 id="title2" align="left">【お買い物先で使えるアプリ】</h3>
