--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           color:#009da5
         }
         h2{
-          background-color:pink
+          background-color:cyan
         }
         li{
           margin-left:25em;
