--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <body>
     
     <div>
-        <img src="" alt="">
+        <img src="icon3.jpeg" alt="">
         <br>
-        <h2 id="title1" align="center">お買い物＆持ち物リスト<br>(Make Lists)</h2>
+        <h2 id="title1" align="center">リストを作成しよう<br>(Make Lists)</h2>
         <h3 id="title2" align="left">【お買い物先で使えるアプリ】</h3>
         <p>買い物に出掛けて買い忘れたことはありませんか？</p>
         <p>直前までは覚えていたのにとがっかりすることはよくあります。</p>
