--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     
     <div>
-        <img src="icon3.jpeg" alt="">
+        <img src="icon3.jpg" alt="">
         <br>
         <h2 id="title1" align="center">リストを作成しよう<br>(Make Lists)</h2>
         <h3 id="title2" align="left">【お買い物先で使えるアプリ】</h3>
