--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
         <img src="icon3.jpg" alt="">
         <br>
         <h2 id="title1" align="center">リストを作成しよう<br>(Make Lists)</h2>
-        <h3 id="title2" align="left">【お買い物先で使えるアプリ】</h3>
-        <p>買い物に出掛けて買い忘れたことはありませんか？</p>
-        <p>直前までは覚えていたのにとがっかりすることはよくあります。</p>
-        <p>このアプリは、スマホを片手に手軽に使えるアプリです。</p>
-        <p>Have you ever been disappointed that you forgot to buy something at the store?</p>
-        <p>It often happens that I remembered it before I went out.</p>
-        <p>This app is easy to use, just like taking notes on paper.</p>
+        <h3 id="title2" align="left">【買い物忘れや携行忘れを防止する生活支援アプリ】</h3>
+        <p>買買い物や持ち物で忘れてしまってガッカリしたことはありませんか。</p>
+        <p>出掛ける直前までは覚えていたのにとがっかりすることはよくあります。</p>
+        <p>このアプリは、買い物用と持ち物用別々のリストを作成し、チェックすることで買い忘れ、携行忘れを防止します。</p>
+        <p>このアプリは、ユーザーの皆様の日常生活を応援する生活支援アプリです。</p>
+        <p>Have you ever been disappointed when you forgot something in shopping or belongings?</p>
+        <p>It's common to be disappointed when you remember something just before you go out.</p>
+        <pThis app creates separate lists for shopping and belongings, and checks them to prevent forgetting to buy or forget to carry.</p>
+        <p>This app is a life support app that supports users' daily lives.</p>
         <h2 id="title1" align="center">プライバシーポリシー</h2>
         <p><span><font color="red">個人情報を扱うのが人である限り、流出の可能性はあります。</font></span></p>
         <p><span><font color="red">As long as people handle personal information, there is a possibility of leakage.</font></span></p>
