--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>このアプリは、ユーザーの皆様の日常生活を応援する生活支援アプリです。</p>
         <p>Have you ever been disappointed when you forgot something in shopping or belongings?</p>
         <p>It's common to be disappointed when you remember something just before you go out.</p>
-        <pThis app creates separate lists for shopping and belongings, and checks them to prevent forgetting to buy or forget to carry.</p>
+        <p>This app creates separate lists for shopping and belongings, and checks them to prevent forgetting to buy or forget to carry.</p>
         <p>This app is a life support app that supports users' daily lives.</p>
         <h2 id="title1" align="center">プライバシーポリシー</h2>
         <p><span><font color="red">個人情報を扱うのが人である限り、流出の可能性はあります。</font></span></p>
