--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div>
         <img src="icon3.jpg" alt="">
         <br>
-        <h2 id="title1" align="center">リストを作成しよう<br>(Make Lists)</h2>
-        <h3 id="title2" align="left">【買い物忘れや携行忘れを防止する生活支援アプリ】</h3>
+        <h2 id="title1" align="center">買い物リスト-持ち物リストも作成できる-<br>(Make Lists)</h2>
+        <h3 id="title2" align="left">【リストを作成して快適生活を！】</h3>
         <p>買買い物や持ち物で忘れてしまってガッカリしたことはありませんか。</p>
         <p>出掛ける直前までは覚えていたのにとがっかりすることはよくあります。</p>
         <p>このアプリは、買い物用と持ち物用別々のリストを作成し、チェックすることで買い忘れ、携行忘れを防止します。</p>
@@ -65,8 +65,8 @@
         <p id="title3" align="left">本アプリは、利用者の個人情報を第三者に提供しません。</p>
         <p id="title3" align="left">This application does not provide users' personal information to third parties.</p>
         <h3 id="title2" align="left">【使用ツール】</h3>
-        <p id="title3" align="left">本アプリは、iOS 13.0 以降で使用できます。</p>
-        <p id="title3" align="left">This app can be used with iOS 13.0 or later.</p>
+        <p id="title3" align="left">本アプリは、iOS 15.0 以降で使用できます。</p>
+        <p id="title3" align="left">This app can be used with iOS 15.0 or later.</p>
         <br>
     </div> 
 </body>
